networking/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: products
spec:
  host: products
  subsets:
  - name: v1
    labels:
      version: v1
  - name: reccomendation
    labels:
      version: reccomendation
