networking/recco-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendations 
spec:
  hosts:
  - recommendations
  http:
  - route:
    - destination:
        host: recommendations
