networking/virtual-service-all-recco-only.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: products
spec:
  hosts:
  - products
  http:
  - route:
    - destination:
        host: products 
        subset: reccomendation
---
